fix alignment of catalog

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,9 +333,8 @@ body {
 
    .transbox {
     margin: 30px;
-    background-color: #ffffff;
-    opacity: 0.6;
-    filter: alpha(opacity=60); /* For IE8 and earlier */
+    background-color: rgba(255, 255, 255, 0.342);
+ 
   }
 
   .drink-info-image{
